2004-06-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstidentity.c: (gst_identity_chain):
	  print offset_end

2004-06-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/Makefile.am:
	* docs/gst/gstreamer-docs.sgml:
	  doc fixes

2004-06-24  David Schleef  <ds@schleef.org>

	* autogen.sh:  Remove call to env, since the buildbot isn't
	broken anymore.

2004-06-24  Wim Taymans  <wim@fluendo.com>

	* gst/elements/Makefile.am:
	* gst/elements/gstelements.c:
	* gst/elements/gstmultifdsink.c: (gst_multifdsink_base_init),
	(gst_multifdsink_class_init), (gst_multifdsink_init),
	(gst_multifdsink_add), (gst_multifdsink_remove),
	(gst_multifdsink_clear), (gst_multifdsink_chain),
	(gst_multifdsink_set_property), (gst_multifdsink_get_property):
	* gst/elements/gstmultifdsink.h:
	Added an element that writes to multiple filedescriptors at once.

2004-06-24  Benjamin Otte  <otte@gnome.org>

	* gst/parse/grammar.y:
	  don't try to link elements before they have been added to bins

2004-06-24  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* libs/gst/bytestream/filepad.c: (gst_file_pad_available),
	(gst_file_pad_get_length):
	* libs/gst/bytestream/filepad.h:
	  add 2 new functions

2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* docs/gst/gstreamer-sections.txt:
	remove from docs, the define that Benjamin removed from gstelement.h

2004-06-22  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.h:
	  remove define that referenced a nonexisting GstElement struct member

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* gst/gstdata.c: (gst_data_is_writable):
	  whoops, return values were wrong, so writable data was marked as
	  non-writable and vice versa. (fixes #143953, spotted by Francis
	  Labonte)
	  Shows how rarely we need to copy data ;)

2004-06-20  Benjamin Otte  <otte@gnome.org>

	* testsuite/schedulers/.cvsignore:
	* testsuite/schedulers/Makefile.am:
	* testsuite/schedulers/143777-2.c: (main):